# recc

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md
cmake/: deps.cmake  gtest.cmake  protos.cmake
protos/reccauth/: auth.proto
scripts/: git-pre-commit.sh  install-hooks.sh
src/: CMakeLists.txt  actionbuilder.cpp  actionbuilder.h  authsession.cpp  authsession.h  blake3.cpp  blake3_dispatch.cpp  blake3_impl.h  blake3_portable.cpp  casclient.cpp  casclient.h  commandlineutils.cpp  commandlineutils.h  compilerdefaults.cpp  compilerdefaults.h  deps.cpp  deps.h  digestgenerator.cpp  digestgenerator.h  env.cpp  env.h  fileutils.cpp  fileutils.h  formpost.cpp  formpost.h  grpcchannel.cpp  grpcchannel.h  grpcchannels.cpp  grpcchannels.h  grpccontext.cpp  grpccontext.h  grpcretry.cpp  grpcretry.h  hashtohex.h  jsonfilemanager.cpp  jsonfilemanager.h  logging.h  merklize.cpp  merklize.h  metricsconfig.cpp  (+23 more)
src/lib/reccdevshim/: CMakeLists.txt  README.md  reccdevshim.c
src/reccmetrics/: durationmetrictimer.cpp  durationmetrictimer.h  durationmetricvalue.cpp  durationmetricvalue.h  filewriter.cpp  filewriter.h  metriccollector.h  metriccollectorfactory.cpp  metriccollectorfactory.h  metricguard.h  publisherguard.h  statsdpublisher.h  statsdpublisheroptions.h  totaldurationmetrictimer.cpp  totaldurationmetrictimer.h  totaldurationmetricvalue.cpp  totaldurationmetricvalue.h  udpwriter.cpp  udpwriter.h
test/: CMakeLists.txt  actionbuilder.cpp  actionbuilder.t.cpp  authsession.cpp  authsession.t.cpp  casclient.cpp  casclient.t.cpp  commandlineutils.cpp  deps.cpp  deps.t.cpp  digestgenerator.cpp  digestgenerator.t.cpp  env.cpp  fileutils.cpp  fileutils.t.cpp  formpost.t.cpp  grpcchannels.cpp  grpccontext.cpp  grpccontext.t.cpp  grpcretry.cpp  grpcretry.t.cpp  jsonfilemanager.cpp  jsonfilemanager.t.cpp  main.cpp  merklize.cpp  merklize.t.cpp  parsedcommand.cpp  parsedcommand.t.cpp  parsedcommandfactory.t.cpp  recccounterguard.cpp  remoteexecutionclient.cpp  remoteexecutionclient.t.cpp  requestmetadata.cpp  subprocess.cpp  subprocess.t.cpp  test.m.cpp  threadutils.t.cpp
test/data/: bgdconfig.yml  hello.cpp
test/data/.recc/: recc.conf
test/data/actionbuilder/: gcc  xlc
test/data/authsession_fixture/: clientToken  serverResponse
test/data/grpcchannels/: improper_jwt  not_json  proper_jwt
test/data/merklize/: script.sh
test/data/merklize/nestdir/nestdir2/: nestdirfile.txt
test/data/merklize/nestdir/nestdir2/nestdir3/: nestdirfile2.txt
test/data/merklize/symlinkdir/: regular_file
test/data/merklize/symlinkdir/subdir/: symlinkfile
test/data/recc/: recc.conf
test/env/: env_check_order.cpp  env_check_order.t.cpp  env_default_action_cache.cpp  env_default_action_cache.t.cpp  env_default_cas.cpp  env_default_cas.t.cpp  env_different_action_cache.cpp  env_different_action_cache.t.cpp  env_different_cas.cpp  env_different_cas.t.cpp  env_file_advertised_order.cpp  env_file_advertised_order.t.cpp  env_from_file.cpp  env_from_file.t.cpp  env_from_file_override.cpp  env_from_file_override.t.cpp  env_multiple_configs.cpp  env_multiple_configs.t.cpp  env_path_vector.cpp  env_path_vector.t.cpp  env_reapi_version.t.cpp  env_set.cpp  env_set.t.cpp  env_utils.cpp  env_utils.t.cpp
test/fixtures/: authsession_fixture.cpp  authsession_fixture.h
test/reccmetrics/: durationmetrictimer_test.cpp  durationmetricvalue_test.cpp  metriccollector_test.cpp  metriccollectorfactory_one_test.cpp  metriccollectorfactory_two_test.t.cpp  metricguard_disabled_test.cpp  metricguard_enabled_test.t.cpp  publisherguard_test.t.cpp  statsdpublisher_test.cpp  statsdpublisher_test.t.cpp  totaldurationmetrictimer_test.t.cpp  totaldurationmetricvalue_test.cpp
